--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
    "ConnectionStrings": {
-    "TodoDb": "server=localhost;user=brachi;password=b215600990;database=prcticode3"
+    "TodoDb": "server=bjlp7ijiwov5txfzkuiw-mysql.services.clever-cloud.com;user=uwbfexaieueaox6b;password=iUsL60ZXiBx3s1IFfjzj;database=bjlp7ijiwov5txfzkuiw"
   },
   "AllowedHosts": "*"
 }
